# Linux_test

./: p7_sign.cpp  p7_verify.cpp  readme.txt  s_decrypt.cpp  s_encrypt.cpp
CC_demp/: CMakeLists.txt  Demo  README.md  main.cc  mcmake.sh  my.pem  private.key  test.env  test.out  test.sign
CC_demp/lib/: CMakeLists.txt  p7_sign.cc  p7_sign.h  p7_verify.cc  p7_verify.h  s_decrypt.cc  s_decrypt.h  s_encrypt.cc  s_encrypt.h
s_server-and-s_client/: Client.key  readme.md  s_client.c  s_server.c
s_server-and-s_client/cmake_s_c/: CMakeLists.txt  Ca.key  Ca.pem  Ca.req  Client.pem  Client.req  DEMO  Server.req  main.c  mcmake.sh
s_server-and-s_client/cmake_s_c/Cnf/: Client.cnf
s_server-and-s_client/cmake_s_c/lib/: CMakeLists.txt  s_client.c  s_client.h  s_server.c  s_server.h
server_and_client/: Ca.srl  Server.key  Server.pem  readme.md  s_client.cc  s_server.cc  test.cc
server_and_client/Cnf/: Ca.cnf  Server.cnf
